ubiquity (1.2.3) UNRELEASED; urgency=low

  * Fix incorrect loop variable reuse in do_remove (closes: Malone #66406).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Oct 2006 14:52:31 +0100

ubiquity (1.2.2) edgy; urgency=low

  * Make sure supplied GRUB device names are either GRUB-style (e.g.
    "(hd0)") or start with "/dev/" (closes: Malone #62479).
  * Exclude Dzongkha and Khmer from the language list for now, as we don't
    ship fonts for them and we don't have enough installer translations yet
    to make it worth rushing those fonts in for Edgy.
  * GTK frontend: Weaken assertion in set_summary_device and make this
    generally more robust (closes: Malone #66100).

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 15 Oct 2006 23:41:55 +0100

ubiquity (1.2.1) edgy; urgency=low

  * Back out orca change from 1.2.0: it doesn't work properly because the
    orca process running as the calling user needs to be killed first. At
    this stage, we feel that it's better to document the workaround than to
    try to fix it.
  * KDE frontend: Enable the forward button at the right times on the
    timezone page (closes: Malone #66022).

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 14 Oct 2006 00:07:48 +0100

ubiquity (1.2.0) edgy; urgency=low

  * If /proc/cmdline contains access=v3, run 'orca -n' and sleep for a bit
    before starting the installer UI.

  * Update .desktop file translations from Rosetta: Georgian.
  * Update translations from Rosetta: Bengali, Czech, German, Greek,
    Spanish, Finnish, French, Galician, Hindi, Croatian, Hungarian, Italian,
    Georgian, Kazakh, Kurdish, Dutch, Polish, Portuguese, Portuguese
    (Brazil), Russian, Slovak, Swedish, Turkish, Chinese (China).
  * Automatic update of included source packages: base-installer
    1.63ubuntu6, choose-mirror 2.04ubuntu2, console-setup 1.7ubuntu18,
    partman-base 90ubuntu8.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Oct 2006 11:40:02 +0100

ubiquity (1.1.30) edgy; urgency=low
