@@ -1158,6 +1158,12 @@ class Wizard:
                 if fstype is None and device in validate_filesystems:
                     validate_mountpoints[device] = \
                         (path, format, validate_filesystems[device], None)
+            # Check for some special-purpose partitions detected by partman.
+            for device, mountpoint in self.auto_mountpoints:
+                if not mountpoint.startswith('/'):
+                    validate_mountpoints[device] = \
+                        (mountpoint, False, None, None)
+
             for check in validation.check_mountpoint(validate_mountpoints,
                                                      self.size):
                 if check == validation.MOUNTPOINT_NOROOT:
